--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,12 @@ jobs:
           auto-start: true
       - name: Build
         run: dotnet build --configuration Release --verbosity minimal
+      - name: Drop existing test databases if present
+        shell: bash
+        run: |
+          echo "Cleaning up any existing test databases..."
+          sqlcmd -l 30 -S '(localdb)\MSSQLLocalDB' -Q "IF DB_ID('TEST_Catalogue') IS NOT NULL DROP DATABASE TEST_Catalogue;" || true
+          sqlcmd -l 30 -S '(localdb)\MSSQLLocalDB' -Q "IF DB_ID('TEST_DataExport') IS NOT NULL DROP DATABASE TEST_DataExport;" || true
       - name: Initialise RDMP
         run: |
           dotnet run -c Release --no-build --project Tools/rdmp/rdmp.csproj -- install --createdatabasetimeout 180 --collation "Latin1_General_CS_AI" "(localdb)\MSSQLLocalDB" TEST_ -e
@@ -94,10 +100,10 @@ jobs:
           ./minio.exe server ./minio --console-address :9001 &
           mkdir ~/.aws
           echo -e "[minio]\naws_access_key_id=minioadmin\naws_secret_access_key=minioadmin\naws_endpoint_url=http://127.0.0.1:9001" > ~/.aws/credentials
-          dotnet test Rdmp.UI.Tests/Rdmp.UI.Tests.csproj --nologo --collect:"XPlat Code Coverage" --no-build --verbosity minimal -c Release -e AWS_ENDPOINT_URL="http://127.0.0.1:9000" --results-directory coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=lcov
-          mv `find coverage -type f` db-ui.lcov
           dotnet test Rdmp.Core.Tests/Rdmp.Core.Tests.csproj --nologo --collect:"XPlat Code Coverage" --no-build --verbosity minimal -c Release -e AWS_ENDPOINT_URL="http://127.0.0.1:9000" --results-directory coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=lcov
           mv `find coverage -type f` db-core.lcov
+          dotnet test Rdmp.UI.Tests/Rdmp.UI.Tests.csproj --nologo --collect:"XPlat Code Coverage" --no-build --verbosity minimal -c Release -e AWS_ENDPOINT_URL="http://127.0.0.1:9000" --results-directory coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=lcov
+          mv `find coverage -type f` db-ui.lcov
       - uses: coverallsapp/github-action@v2.3.6
         with:
           github-token: ${{ secrets.github_token }}
@@ -147,6 +153,12 @@ jobs:
           auto-start: true
       - name: Build
         run: dotnet build --configuration Release --verbosity minimal
+      - name: Drop existing test databases if present
+        shell: bash
+        run: |
+          echo "Cleaning up any existing test databases..."
+          sqlcmd -l 30 -S '(localdb)\MSSQLLocalDB' -Q "IF DB_ID('TEST_Catalogue') IS NOT NULL DROP DATABASE TEST_Catalogue;" || true
+          sqlcmd -l 30 -S '(localdb)\MSSQLLocalDB' -Q "IF DB_ID('TEST_DataExport') IS NOT NULL DROP DATABASE TEST_DataExport;" || true
       - name: Initialise RDMP
         run: |
           dotnet run -c Release --no-build --project Tools/rdmp/rdmp.csproj -- install --createdatabasetimeout 180 "(localdb)\MSSQLLocalDB" TEST_ -e
@@ -199,11 +211,11 @@ jobs:
           ./minio.exe server ./minio --console-address :9001 &
           mkdir ~/.aws
           echo -e "[minio]\naws_access_key_id=minioadmin\naws_secret_access_key=minioadmin\naws_endpoint_url=http:127.0.0.1:9001" > ~/.aws/credentials
-          
-          dotnet test Rdmp.UI.Tests/Rdmp.UI.Tests.csproj --nologo --collect:"XPlat Code Coverage" --no-build --verbosity minimal -c Release -e AWS_ENDPOINT_URL="http://127.0.0.1:9000" --results-directory coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=lcov
-          mv `find coverage -type f` fs-ui.lcov
+
           dotnet test Rdmp.Core.Tests/Rdmp.Core.Tests.csproj --nologo --collect:"XPlat Code Coverage" --no-build --verbosity minimal -c Release  -e AWS_ENDPOINT_URL="http://127.0.0.1:9000" --results-directory coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=lcov
           mv `find coverage -type f` fs-core.lcov
+          dotnet test Rdmp.UI.Tests/Rdmp.UI.Tests.csproj --nologo --collect:"XPlat Code Coverage" --no-build --verbosity minimal -c Release -e AWS_ENDPOINT_URL="http://127.0.0.1:9000" --results-directory coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=lcov
+          mv `find coverage -type f` fs-ui.lcov
       - uses: coverallsapp/github-action@v2.3.6
         with:
           github-token: ${{ secrets.github_token }}
