Implement compile-time type registry via source generator
Replaces runtime MEF reflection with compile-time FrozenDictionary type
registry, eliminating assembly loading timing issues and improving performance.

Implementation:
1. Created Rdmp.Core.Generators project with TypeRegistryGenerator
2. Generator produces CompiledTypeRegistry.g.cs in consuming projects
3. MEF.GetType() now checks compiled registry first, falls back to runtime
4. Automatic propagation to all downstream projects via ProjectReference

Benefits:
- Zero runtime reflection for type lookup (O(1) FrozenDictionary)
- All referenced types available at compile-time
- Eliminates assembly loading timing bugs (issues #6/#7)
- Auto-propagates to every project that references Rdmp.Core
- Each project gets complete type registry of all dependencies

Generator Features:
- Filters out generic type definitions (unbound type parameters)
- Skips internal types from external assemblies
- Excludes .Internal namespaces (experimental APIs)
- Skips Obsolete/Experimental types with diagnostic IDs
- Skips compiler-generated types
- Uses global:: qualified names to avoid conflicts
- Generates FrozenDictionary for optimal lookup performance

Files:
- Rdmp.Core.Generators/: New project for source generators
- Rdmp.Core.Generators/TypeRegistryGenerator.cs: Generator implementation
- Rdmp.Core.Tests/Rdmp.Core.Tests.csproj: References generator as analyzer
- Rdmp.Core/Rdmp.Core.csproj: Updated to work with generator project
- Rdmp.Core/Repositories/MEF.cs: Uses compiled registry with runtime fallback
- EvaluateNamespacesAndSolutionFoldersTests.cs: Simplified (no manual loading)

This eliminates the AutomateExtraction discovery failures by ensuring all
types are available at compile-time regardless of assembly load order.

--- a/Rdmp.Core.Tests/Rdmp.Core.Tests.csproj
+++ b/Rdmp.Core.Tests/Rdmp.Core.Tests.csproj
@@ -84,6 +84,8 @@
     <ItemGroup>
         <ProjectReference Include="..\Rdmp.Core\Rdmp.Core.csproj" />
         <ProjectReference Include="..\Tests.Common\Tests.Common.csproj" />
+        <!-- Source generator for compile-time type registry -->
+        <ProjectReference Include="..\Rdmp.Core.Generators\Rdmp.Core.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
         <!-- Plugin references to ensure assemblies are loaded for MEF type resolution -->
         <ProjectReference Include="..\Plugins\HicPlugin\SCIStorePlugin\SCIStorePlugin.csproj" />
         <ProjectReference Include="..\Plugins\RdmpExtensions\AutomationPlugins\LoadModules.Extensions.AutomationPlugins\LoadModules.Extensions.AutomationPlugins.csproj" />
