Fix build issues for cross-platform compatibility
- Enable Windows targeting for macOS builds by setting EnableWindowsTargeting=true
  in GoDartsPluginUI and LoadModules.Extensions.Interactive projects
- Fix nullable reference warnings in CHIJob.cs:
  * Line 70: Add null-forgiving operator for const field reflection (values are never null)
  * Line 77: Cast to string? instead of string to match nullable property types

These changes allow the solution to build cleanly on macOS while targeting
Windows-specific frameworks.

--- a/Plugins/HicPlugin/GoDartsPluginUI/GoDartsPluginUI.csproj
+++ b/Plugins/HicPlugin/GoDartsPluginUI/GoDartsPluginUI.csproj
@@ -5,6 +5,7 @@
     <AssemblyTitle>GoDartsPluginUI</AssemblyTitle>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <DebugType>embedded</DebugType>
   </PropertyGroup>
   <PropertyGroup>
