--- a/Plugins/RdmpExtensions/Interactive/LoadModules.Extensions.Interactive/LoadModules.Extensions.Interactive.csproj
+++ b/Plugins/RdmpExtensions/Interactive/LoadModules.Extensions.Interactive/LoadModules.Extensions.Interactive.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>$(TargetFramework)-windows</TargetFramework>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <UseWindowsForms>true</UseWindowsForms>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <AssemblyTitle>LoadModules.Extensions.Interactive</AssemblyTitle>
     <Company>Hewlett-Packard Company</Company>
     <Product>LoadModules.Extensions.Interactive</Product>
