Make markdown link check non-blocking and fix MEF.cs Release build
- Add continue-on-error to markdown link checker in CI to prevent false
  failures from external site downtime (e.g., gnu.org)
- Fix unused variable warning in MEF.cs by using separate catch blocks
  for Debug/Release instead of conditional variable naming

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -298,6 +298,7 @@ jobs:
           sarif_file: sarif-results/csharp.sarif
           category: "/language:csharp"
       - name: Run markdown link check
+        continue-on-error: true
         uses: gaurav-nelson/github-action-markdown-link-check@v1
         with:
           use-quiet-mode: 'no'
