--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
   # Set the job key. The key is displayed as the job name
   # when a job name is not provided
   tests_db:
-    name: Run Database Tests
+    name: Run UI Database Tests (Windows)
     runs-on: windows-latest
     env:
       RDMP_KEY_LOCATION: D:\a\RDMP\RDMP\key\private-key.xml
@@ -105,7 +105,7 @@ jobs:
             sed '1,/^Commands:/d' scripts/create_dataload.yaml >> /tmp/combined-tests.yaml
             sed '1,/^Commands:/d' scripts/orphan_extractable_column.yaml >> /tmp/combined-tests.yaml
             dotnet run -c Release --no-build --project Tools/rdmp/rdmp.csproj -- -f /tmp/combined-tests.yaml
-      - name: Test (DB)
+      - name: Test (DB) - UI Only
         timeout-minutes: 45
         shell: bash
         run: |
@@ -114,18 +114,16 @@ jobs:
           ./minio.exe server ./minio --console-address :9001 &
           mkdir ~/.aws
           echo -e "[minio]\naws_access_key_id=minioadmin\naws_secret_access_key=minioadmin\naws_endpoint_url=http://127.0.0.1:9001" > ~/.aws/credentials
-          dotnet test Rdmp.Core.Tests/Rdmp.Core.Tests.csproj --nologo --collect:"XPlat Code Coverage" --no-build --verbosity minimal -c Release -e AWS_ENDPOINT_URL="http://127.0.0.1:9000" --results-directory coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=lcov
-          mv `find coverage -type f` db-core.lcov
           dotnet test Rdmp.UI.Tests/Rdmp.UI.Tests.csproj --nologo --collect:"XPlat Code Coverage" --no-build --verbosity minimal -c Release -e AWS_ENDPOINT_URL="http://127.0.0.1:9000" --results-directory coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=lcov
           mv `find coverage -type f` db-ui.lcov
       - uses: coverallsapp/github-action@v2.3.6
         with:
           github-token: ${{ secrets.github_token }}
-          files: ./db-ui.lcov ./db-core.lcov
-          flag-name: unit tests
+          files: ./db-ui.lcov
+          flag-name: windows-ui-db-tests
 
   tests_file_system:
-    name: Run File System Tests
+    name: Run UI File System Tests (Windows)
     runs-on: windows-latest
     env:
       RDMP_KEY_LOCATION: D:\a\RDMP\RDMP\key\private-key.xml
@@ -217,7 +215,7 @@ jobs:
             sed '1,/^Commands:/d' scripts/create_dataload.yaml >> /tmp/combined-tests.yaml
             sed '1,/^Commands:/d' scripts/orphan_extractable_column.yaml >> /tmp/combined-tests.yaml
             dotnet run -c Release --no-build --project Tools/rdmp/rdmp.csproj -- -f /tmp/combined-tests.yaml
-      - name: Test with local file system
+      - name: Test with local file system - UI Only
         shell: bash
         run:  |
           echo "UseFileSystemRepo: true" >> Tests.Common/TestDatabases.txt
@@ -226,20 +224,18 @@ jobs:
           mkdir ~/.aws
           echo -e "[minio]\naws_access_key_id=minioadmin\naws_secret_access_key=minioadmin\naws_endpoint_url=http:127.0.0.1:9001" > ~/.aws/credentials
 
-          dotnet test Rdmp.Core.Tests/Rdmp.Core.Tests.csproj --nologo --collect:"XPlat Code Coverage" --no-build --verbosity minimal -c Release  -e AWS_ENDPOINT_URL="http://127.0.0.1:9000" --results-directory coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=lcov
-          mv `find coverage -type f` fs-core.lcov
           dotnet test Rdmp.UI.Tests/Rdmp.UI.Tests.csproj --nologo --collect:"XPlat Code Coverage" --no-build --verbosity minimal -c Release -e AWS_ENDPOINT_URL="http://127.0.0.1:9000" --results-directory coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=lcov
           mv `find coverage -type f` fs-ui.lcov
       - uses: coverallsapp/github-action@v2.3.6
         with:
           github-token: ${{ secrets.github_token }}
-          files: ./fs-ui.lcov ./fs-core.lcov
-          flag-name: unit tests
+          files: ./fs-ui.lcov
+          flag-name: windows-ui-fs-tests
 
   bundle:
     name: Bundle Build
     runs-on: ubuntu-latest
-    needs: [tests_db, tests_file_system]
+    needs: [tests_db, tests_file_system, linux-tests_db, linux-tests_file_system]
     permissions:
       actions: read
       contents: write
