--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   # Set the job key. The key is displayed as the job name
   # when a job name is not provided
-  tests_db:
+  tests_ui_db:
     name: Run UI Database Tests (Windows)
     runs-on: windows-latest
     env:
@@ -122,7 +122,7 @@ jobs:
           files: ./db-ui.lcov
           flag-name: windows-ui-db-tests
 
-  tests_file_system:
+  tests_ui_fs:
     name: Run UI File System Tests (Windows)
     runs-on: windows-latest
     env:
@@ -216,6 +216,7 @@ jobs:
             sed '1,/^Commands:/d' scripts/orphan_extractable_column.yaml >> /tmp/combined-tests.yaml
             dotnet run -c Release --no-build --project Tools/rdmp/rdmp.csproj -- -f /tmp/combined-tests.yaml
       - name: Test with local file system - UI Only
+        timeout-minutes: 30
         shell: bash
         run:  |
           echo "UseFileSystemRepo: true" >> Tests.Common/TestDatabases.txt
@@ -235,7 +236,7 @@ jobs:
   bundle:
     name: Bundle Build
     runs-on: ubuntu-latest
-    needs: [tests_db, tests_file_system]
+    needs: [tests_ui_db, tests_ui_fs]
     permissions:
       actions: read
       contents: write
