Fix Windows UI tests and add LoadModules.Extensions tests to Linux coverage
- Add LoadModules.Extensions.Tests to Linux workflow (non-Windows tests only)
- Run Python3InstalledTests and TestsThatWorkRegardless tests if they exist
- Fix UI test command syntax (missing -- before DataCollectionRunSettings)
- Update coverage merge to include extensions.lcov if tests exist
- This ensures all test projects contribute to coverage reporting

--- a/.github/workflows/tests-unified.yml
+++ b/.github/workflows/tests-unified.yml
@@ -127,7 +127,7 @@ jobs:
             -c Release \
             -e AWS_ENDPOINT_URL="http://127.0.0.1:9000" \
             --results-directory coverage-db \
-            DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=lcov
+            -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=lcov
           mv `find coverage-db -type f` windows-ui-db.lcov
 
       - name: Re-initialise RDMP (File System)
@@ -150,7 +150,7 @@ jobs:
             -c Release \
             -e AWS_ENDPOINT_URL="http://127.0.0.1:9000" \
             --results-directory coverage-fs \
-            DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=lcov
+            -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=lcov
           mv `find coverage-fs -type f` windows-ui-fs.lcov
 
       - name: Merge Windows UI coverage
