Remove RDMP_KEY_LOCATION environment variable for Linux tests
- Without the key file, setting RDMP_KEY_LOCATION causes a DirectoryNotFoundException
- Unsetting the variable allows the system to use the built-in fallback key

--- a/.github/workflows/tests-unified.yml
+++ b/.github/workflows/tests-unified.yml
@@ -230,7 +230,7 @@ jobs:
     name: Linux Database Tests
     runs-on: ubuntu-22.04
     env:
-      RDMP_KEY_LOCATION: /tmp/key/private-key.xml
+      # RDMP_KEY_LOCATION not set - will use built-in fallback key
       MSSQL_SA_PASSWORD: "YourStrong!Passw0rd"
       ACCEPT_EULA: "Y"
       MSSQL_PID: "developer"
